# zed

./: Cargo.toml
.config/: hakari.toml
crates/activity_indicator/: Cargo.toml
crates/anthropic/: Cargo.toml
crates/askpass/: Cargo.toml
crates/assets/: Cargo.toml
crates/assistant/: Cargo.toml
crates/assistant2/: Cargo.toml
crates/assistant_context_editor/: Cargo.toml
crates/assistant_eval/: Cargo.toml
crates/assistant_settings/: Cargo.toml
crates/assistant_slash_command/: Cargo.toml
crates/assistant_slash_commands/: Cargo.toml
crates/assistant_tool/: Cargo.toml
crates/assistant_tools/: Cargo.toml
crates/audio/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/aws_http_client/: Cargo.toml
crates/bedrock/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/call/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/clock/: Cargo.toml
crates/collab/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette_hooks/: Cargo.toml
crates/component/: Cargo.toml
crates/component_preview/: Cargo.toml
crates/context_server/: Cargo.toml
crates/context_server_settings/: Cargo.toml
crates/copilot/: Cargo.toml
crates/credentials_provider/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/db/: Cargo.toml
crates/time_format/: Cargo.toml
nix/: build.nix  shell.nix
script/: generate-licenses
(+150 files in other folders)
